--- a/package.json
+++ b/package.json
@@ -36,12 +36,11 @@
     "@types/lodash": "^4.14.37",
     "@types/minimist": "^1.1.29",
     "@types/run-sequence": "0.0.28",
-    "browser-sync": "^2.17.5",
     "checksum": "^0.1.1",
     "color-console": "^0.0.1",
     "del": "^2.2.1",
     "gulp": "^3.9.1",
-    "gulp-cache": "^0.4.5",
+    "gulp-cached": "^1.1.0",
     "gulp-mocha": "^3.0.1",
     "gulp-typescript": "^3.0.2",
     "lodash": "^4.13.1",
@@ -52,7 +51,7 @@
   },
   "devDependencies": {
     "bluebird": "^3.4.1",
-    "development-tool": "0.0.1-beta2",
+    "development-tool": "0.0.1-rc",
     "through2": "^2.0.1",
     "ts-node": "^1.6.0",
     "tslint": "^3.15.1",
