--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "development-tool-node",
-  "version": "0.0.1-rc2",
+  "version": "0.0.1",
   "description": "development build tools for node.",
   "main": "./lib/task.js",
   "typings": "./lib/task",
