--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "development-tool-node",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "development build tools for node.",
   "main": "./lib/task.js",
   "typings": "./lib/task",
@@ -31,13 +31,13 @@
     "url": "https://github.com/zhouhoujun/development-tool-node.git"
   },
   "dependencies": {
+    "@types/chalk": "^0.4.31",
     "@types/gulp": "^3.8.32",
     "@types/gulp-mocha": "0.0.29",
     "@types/lodash": "^4.14.37",
     "@types/minimist": "^1.1.29",
-    "@types/run-sequence": "0.0.28",
+    "chalk": "^1.1.3",
     "checksum": "^0.1.1",
-    "color-console": "^0.0.1",
     "del": "^2.2.1",
     "gulp": "^3.9.1",
     "gulp-cached": "^1.1.0",
@@ -45,12 +45,11 @@
     "gulp-typescript": "^3.0.2",
     "lodash": "^4.13.1",
     "merge2": "^1.0.2",
-    "run-sequence": "^1.2.2",
     "typescript": "^2.0.3"
   },
   "devDependencies": {
     "bluebird": "^3.4.1",
-    "development-tool": "0.0.1",
+    "development-tool": "0.0.2",
     "through2": "^2.0.1",
     "ts-node": "^1.6.0",
     "tslint": "^3.15.1",
