--- a/package.json
+++ b/package.json
@@ -36,21 +36,24 @@
     "@types/gulp-mocha": "0.0.29",
     "@types/lodash": "^4.14.37",
     "@types/minimist": "^1.1.29",
+    "babel-preset-es2015": "^6.18.0",
     "chalk": "^1.1.3",
     "checksum": "^0.1.1",
     "del": "^2.2.1",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "gulp-cached": "^1.1.0",
     "gulp-mocha": "^3.0.1",
     "gulp-sourcemaps": "^2.1.1",
     "gulp-typescript": "^3.0.2",
+    "gulp-uglify": "^2.0.0",
     "lodash": "^4.13.1",
     "merge2": "^1.0.2",
     "typescript": "^2.0.3"
   },
   "devDependencies": {
     "bluebird": "^3.4.1",
-    "development-tool": "^0.2.0",
+    "development-tool": "^0.4.1",
     "through2": "^2.0.1",
     "ts-node": "^1.6.0",
     "tslint": "^3.15.1",
