--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "development-tool-node",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "development build tools for node.",
   "main": "./lib/index.js",
   "typings": "./lib/index",
@@ -33,13 +33,13 @@
   "dependencies": {
     "@types/chalk": "^0.4.31",
     "@types/gulp": "^3.8.32",
-    "@types/gulp-mocha": "0.0.29",
     "@types/lodash": "^4.14.37",
     "@types/minimist": "^1.1.29",
     "babel-preset-es2015": "^6.18.0",
     "chalk": "^1.1.3",
     "checksum": "^0.1.1",
     "del": "^2.2.1",
+    "development-core": "^0.5.5",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-cached": "^1.1.0",
@@ -49,11 +49,13 @@
     "gulp-uglify": "^2.0.0",
     "lodash": "^4.13.1",
     "merge2": "^1.0.2",
-    "typescript": "^2.0.3",
-    "development-core": "^0.5.0"
+    "typescript": "^2.0.3"
   },
   "devDependencies": {
+    "@types/chai": "^3.4.34",
+    "@types/gulp-mocha": "0.0.29",
     "bluebird": "^3.4.1",
+    "gulp-mocha": "^3.0.1",
     "through2": "^2.0.1",
     "ts-node": "^1.6.0",
     "tslint": "^3.15.1",
