--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "development-tool-node",
-  "version": "0.2.6",
+  "version": "0.3.0",
   "description": "development build tools for node.",
   "main": "./lib/index.js",
   "typings": "./lib/index",
@@ -42,6 +42,7 @@
     "chalk": "^1.1.3",
     "checksum": "^0.1.1",
     "del": "^2.2.1",
+    "development-assert-ts": "^0.1.1",
     "development-core": "^0.5.8",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
@@ -51,11 +52,11 @@
     "gulp-typescript": "^3.0.2",
     "gulp-uglify": "^2.0.0",
     "lodash": "^4.13.1",
-    "merge2": "^1.0.2",
     "typescript": "^2.0.3"
   },
   "devDependencies": {
     "bluebird": "^3.4.1",
+    "development-tool": "^0.6.0",
     "through2": "^2.0.1",
     "ts-node": "^1.6.0",
     "tslint": "^3.15.1",
