--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "development-tool-node",
-  "version": "0.6.0",
-  "description": "development build tools for node.",
+  "version": "0.6.1",
+  "description": "development build tasks for node.",
   "main": "./lib/index.js",
   "typings": "./lib/index",
   "scripts": {
@@ -43,7 +43,7 @@
     "chalk": "^1.1.3",
     "checksum": "^0.1.1",
     "del": "^2.2.1",
-    "development-core": "^0.9.0",
+    "development-core": "^0.9.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-cached": "^1.1.0",
@@ -57,7 +57,7 @@
   "devDependencies": {
     "bluebird": "^3.4.1",
     "development-assert-ts": "^0.4.0",
-    "development-tool": "^0.9.0",
+    "development-tool": "^0.9.1",
     "through2": "^2.0.1",
     "ts-node": "^1.6.0",
     "tslint": "^3.15.1",
