--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "name": "development-tool-node",
   "compilerOptions": {
     "module": "commonjs",
-    "target":"es2015",
+    "target":"es5",
+    "lib": ["dom", "es2015.promise", "es5"],
     "declaration": true,
     "allowSyntheticDefaultImports": true,
     "removeComments": false,
