--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "development-tool-node",
-  "version": "0.6.3",
+  "version": "0.6.4",
   "description": "development build tasks for node.",
   "main": "./lib/index.js",
   "typings": "./lib/index",
@@ -38,30 +38,28 @@
     "@types/gulp-mocha": "0.0.29",
     "@types/lodash": "^4.14.37",
     "@types/minimist": "^1.1.29",
-    "babel-preset-es2015": "^6.18.0",
     "chai": "^3.5.0",
     "chalk": "^1.1.3",
     "checksum": "^0.1.1",
     "del": "^2.2.1",
-    "development-core": "^0.10.0",
+    "development-core": "^0.10.3",
     "development-assert-ts": "^0.6.1",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
     "gulp-cached": "^1.1.0",
     "gulp-mocha": "^3.0.1",
     "gulp-sourcemaps": "^2.1.1",
     "gulp-typescript": "^3.0.2",
     "gulp-uglify": "^2.0.0",
-    "lodash": "^4.13.1",
-    "typescript": "^2.0.3"
+    "lodash": "^4.13.1"
   },
   "devDependencies": {
     "bluebird": "^3.4.1",    
-    "development-tool": "^0.10.1",
+    "development-tool": "^0.10.2",
     "through2": "^2.0.1",
-    "ts-node": "^1.6.0",
-    "tslint": "^3.15.1",
-    "tslint-stylish": "^2.1.0-beta",
+    "ts-node": "^2.1.0",
+    "tslint": "^4.4.2",
+    "tslint-stylish": "^2.1.0",
+    "typescript": "^2.1.4",
     "zone.js": "^0.6.10"
   },
   "homepage": "https://github.com/zhouhoujun/development-tool-node#readme"
