--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "target":"es5",
-    "lib": ["dom", "es2015.promise", "es5"],
+    "lib": ["dom", "es2015", "es2017"],
     "declaration": true,
     "allowSyntheticDefaultImports": true,
     "removeComments": false,
