fix clear bug, update core

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "development-tool-node",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "description": "development build tasks for node.",
     "main": "./lib/index.js",
     "typings": "./lib/index",
@@ -42,8 +42,8 @@
         "chalk": "^1.1.3",
         "checksum": "^0.1.1",
         "del": "^2.2.1",
-        "development-assert-ts": "^1.*",
-        "development-core": "^1.*",
+        "development-assert-ts": "^1.1.0",
+        "development-core": "^1.1.0",
         "gulp": "^3.9.1",
         "gulp-cached": "^1.1.0",
         "gulp-mocha": "^3.*",
@@ -55,7 +55,7 @@
     },
     "devDependencies": {
         "bluebird": "^3.4.1",
-        "development-tool": "^1.*",
+        "development-tool": "^1.1.0",
         "through2": "^2.0.1",
         "ts-node": "*",
         "tslint": "*",
