--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "development-tool-node",
-    "version": "1.1.0",
+    "version": "2.0.0-beta1",
     "description": "development build tasks for node.",
     "main": "./lib/index.js",
     "typings": "./lib/index",
@@ -37,25 +37,24 @@
         "@types/gulp": "^3.8.32",
         "@types/gulp-mocha": "0.0.29",
         "@types/lodash": "^4.14.37",
-        "@types/minimist": "^1.1.29",
         "chai": "^3.5.0",
         "chalk": "^1.1.3",
         "checksum": "^0.1.1",
         "del": "^2.2.1",
-        "development-assert-ts": "^1.1.0",
-        "development-core": "^1.1.0",
+        "development-assert-ts": "^2.0.0-beta1",
+        "development-core": "^2.0.0-beta1",
         "gulp": "^3.9.1",
         "gulp-cached": "^1.1.0",
         "gulp-mocha": "^3.*",
-        "gulp-sourcemaps": "2.*",
-        "gulp-typescript": "3.*",
-        "typescript": "^2.*",
-        "gulp-uglify": "^2.*",
-        "lodash": "^4.*"
+        "gulp-sourcemaps": "^2.6.0",
+        "gulp-typescript": "^3.1.7",
+        "typescript": "^2.4.1",
+        "gulp-uglify": "^3.0.0",
+        "lodash": "4.*"
     },
     "devDependencies": {
         "bluebird": "^3.4.1",
-        "development-tool": "^1.1.0",
+        "development-tool": "^2.0.0-beta1",
         "through2": "^2.0.1",
         "ts-node": "*",
         "tslint": "*",
