--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
     "name": "development-tool-node",
-    "version": "2.0.1",
+    "version": "2.0.2",
     "description": "development build tasks for node.",
     "main": "./lib/index.js",
     "typings": "./lib/index",
     "scripts": {
         "gulp": "gulp",
         "reinstall": "npm cache clean && npm install",
-        "test": "gulp build test",
-        "prepublish": "gulp build --release",
+        "test": "gulp start test",
+        "prepublish": "gulp start --release",
         "e2e": "protractor",
         "e2e.live": "protractor --elementExplorer"
     },
@@ -40,8 +40,8 @@
         "chalk": "^1.1.3",
         "checksum": "^0.1.1",
         "del": "^2.2.1",
-        "development-assert-ts": "^2.0.3",
-        "development-core": "^2.0.5",
+        "development-assert-ts": "^2.0.4",
+        "development-core": "^2.0.8",
         "gulp": "^3.9.1",
         "gulp-cached": "^1.1.0",
         "gulp-mocha": "^3.*",
@@ -53,7 +53,7 @@
     },
     "devDependencies": {
         "bluebird": "^3.4.1",
-        "development-tool": "^2.0.6",
+        "development-tool": "^2.0.9",
         "through2": "^2.0.1",
         "ts-node": "*",
         "tslint": "*",
