--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "development-tool-node",
-    "version": "2.0.2",
+    "version": "2.1.0",
     "description": "development build tasks for node.",
     "main": "./lib/index.js",
     "typings": "./lib/index",
@@ -40,20 +40,20 @@
         "chalk": "^1.1.3",
         "checksum": "^0.1.1",
         "del": "^2.2.1",
-        "development-assert-ts": "^2.0.4",
-        "development-core": "^2.0.8",
+        "development-assert-ts": "^2.1.3",
+        "development-core": "^2.1.6",
         "gulp": "^3.9.1",
         "gulp-cached": "^1.1.0",
         "gulp-mocha": "^3.*",
         "gulp-sourcemaps": "^2.6.0",
         "gulp-typescript": "^3.2.1",
-        "typescript": "^2.4.1",
         "gulp-uglify": "^3.0.0",
-        "lodash": "4.*"
+        "lodash": "4.*",
+        "typescript": "^2.4.1"
     },
     "devDependencies": {
         "bluebird": "^3.4.1",
-        "development-tool": "^2.0.9",
+        "development-tool": "^2.1.3",
         "through2": "^2.0.1",
         "ts-node": "*",
         "tslint": "*",
